Tmux: config updates

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,18 +1,20 @@
 # remap prefix to Ctrl-Space
-unbind-key C-Space
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
+unbind-key C-a
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 # colour terminal
 # (included in tmux-sensible)
 #set-option -g default-terminal "screen-256color"
+
 # override so as to make colours work with Vim
 # https://github.com/tmux/tmux/issues/1246
 # https://github.com/tmux/tmux/issues/622
 set-option -ga terminal-overrides ",screen-256color:Tc"
 
 # longer history
-set-option -g history-limit 10000
+# included in tmux-sensible
+#set-option -g history-limit 10000
 
 # number windows from 1
 set-option -g base-index 1
@@ -24,9 +26,12 @@ set-option -g renumber-windows on
 set-option -g mouse on
 
 # open new windows in current dir
-bind-key c new-window -c "#{pane_current_path}"
+bind-key C new-window -c "#{pane_current_path}"
 bind-key '"' split-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
+# open a new window, prompting for name
+bind-key c command-prompt -p "Name of new window: " \
+    "new-window -c '#{pane_current_path}' -n '%%'"
 
 # reload config
 # included in tmux-sensible
@@ -39,30 +44,50 @@ bind-key % split-window -h -c "#{pane_current_path}"
 
 set-option -g status-style "fg=colour228,bg=colour240" 
 set-option -g status-left-style "bold"
+## Allow more space on the right to show the current dir
+set-option -g status-right-length 60
+
 # Allow more space for the session name
-set-option -g status-left-length 50
-set-option -g status-right-style "bold"
-# Modify the right part of the status bar:
-# - remove date and time on Mac
-# - indicate when prefix key has been pressed
-set-option -g status-right "\
-#{?client_prefix,#[bg=colour63]<Prefix>#[default]  ,}\
-#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\
-#{?#{m:Darwin,#(uname)},,%H:%M %d-%b-%y}\
-"
+#set-option -g status-left-length 50
+#set-option -g status-right-style "bold"
 
 # Window list styling
 set-option -g window-status-current-style "bold"
 set-option -g window-status-last-style "underscore"
 set-option -g window-status-separator " | "
 
+# Clear the session name from the left -- will show on second line.
+set-option -g status-left " "
+
+# Modify the right part of the status bar:
+# - indicate when prefix key has been pressed
+# - indicate offset if there is one
+# - show current dir in current pane, truncating if necessary
+#   * replace homedir with ~ manually to save space
+#     (this is not done automatically by tmux)
+#   * shorten the path enough that it will not change if the prefix indicator
+#     is showing
+set-option -g status-right "\
+#{?client_prefix,#[bg=colour63]<Prefix>#[default]  ,}\
+#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\
+[ #(echo #{pane_current_path} |\
+sed  \"s|$HOME|~|\" |\
+sed -E 's/.*(.\{43\})/...\\1/') ]\
+"
+
 # Use a second status bar row to display pane information:
-# - highlight active pane
-# - indicate panes in a mode and/or zoomed
-# - if the pane has a non-default title (ie not the hostname),
-#   show that, otherwise show the current command
+# - show session name on the left
+# - pane list in the middle, similar to window list
+#   * need to build pane list manually
+#   * highlight active pane
+#   * indicate panes in a mode and/or zoomed
+#   * if the pane has a non-default title (ie not the hostname), show that,
+#     otherwise show the current command
+# - show time and date on the right
 set-option -g status-format[1] "\
-#[align=centre]#{P:\
+#[align=left,bold][#S]#[default]\
+#[align=centre]\
+#{P:\
 #{?#{==:#P,1},, | }\
 #{?pane_active,#[bold],}\
 #{?pane_in_mode,#[bg=colour69],}\
@@ -73,6 +98,7 @@ set-option -g status-format[1] "\
 #{?window_zoomed_flag, (Z),}\
 #{?pane_in_mode, (#{pane_mode}),}\
 #[default]}\
+#[align=right,bold]%a %b %e %R  \
 "
 set-option -g status  2
 
@@ -82,6 +108,12 @@ set-option -g status  2
 
 set-option -g pane-active-border-style "fg=white"
 set-option -g pane-border-style "fg=colour240"
+
+
+# Messages
+# --------
+
+set-option -g message-style "bg=colour233,fg=colour216,bold"
 
 
 #------------------------------------------------------------------------------
