tmux: fix copy-paste support

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -124,9 +124,16 @@ set-option -g message-style "bg=colour233,fg=colour216,bold"
 set-option -g @plugin "tmux-plugins/tpm"
 set-option -g @plugin "tmux-plugins/tmux-sensible"
 #set-option -g @plugin "tmux-plugins/tmux-sidebar"
+
 # Persistent sessions
 set-option -g @plugin "tmux-plugins/tmux-resurrect"
 set-option -g @plugin "tmux-plugins/tmux-continuum"
+
+# Copy-paste support
+# seems to work without `reattach-to-user-namespace`
+set-option -g @plugin "tmux-plugins/tmux-yank"
+# Don't clear highlight immediately (eg. on releasing mouse button)
+set-option -g @yank_action "copy-pipe"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b "~/.tmux/plugins/tpm/tpm"
